sources/asm/_antasm.y.output
State 5 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce


Grammar

    0 $accept: code $end

    1 code: list_of_pragmas list_of_asm_functions

    2 list_of_pragmas: list_of_pragmas pragma_definition
    3                | pragma_definition

    4 pragma_definition: pragma quted_string NEW_LINE

    5 pragma: PRAGMA_CLASS
    6       | PRAGMA_NAME
    7       | PRAGMA_VERSION

    8 list_of_defines: list_of_defines define_declaration
    9                | define_declaration
   10                | /* empty */

   11 define_declaration: PRAGMA_DEFINE label number NEW_LINE

   12 list_of_asm_functions: list_of_asm_functions asm_function
   13                      | asm_function

   14 asm_function: list_of_defines asm_function_name list_of_commands

   15 asm_function_name: DOT label NEW_LINE

   16 list_of_commands: list_of_commands asm_command_line
   17                 | asm_command_line

   18 asm_command_line: asm_command NEW_LINE

   19 asm_command: label COLON
   20            | ADD address COMMA address
   21            | AND address COMMA address
   22            | DEC address
   23            | DIV address COMMA address
   24            | INC address
   25            | MOD address COMMA address
   26            | MUL address COMMA address
   27            | NEG address
   28            | NOT address
   29            | OR address COMMA address
   30            | SUB address COMMA address
   31            | XOR address COMMA address
   32            | MIN address COMMA address
   33            | MAX address COMMA address
   34            | BSF address COMMA address
   35            | BSR address COMMA address
   36            | BT address COMMA address
   37            | BTR address COMMA address
   38            | BTS address COMMA address
   39            | BTC address COMMA address
   40            | SHL address COMMA address
   41            | SHR address COMMA address
   42            | ROL address COMMA address
   43            | ROR address COMMA address
   44            | EQ address COMMA address
   45            | NEQ address COMMA address
   46            | GT address COMMA address
   47            | GE address COMMA address
   48            | LT address COMMA address
   49            | LE address COMMA address
   50            | TEST address COMMA address
   51            | JMP label
   52            | JZ label
   53            | JNZ label
   54            | JO label
   55            | JNO label
   56            | JCZ label
   57            | JCNZ label
   58            | LOOP label
   59            | MOV address COMMA address
   60            | CALL label
   61            | LEN address COMMA address
   62            | EXIT
   63            | LDTR address
   64            | LDFD address
   65            | LDEN address
   66            | LDFR address
   67            | CIDL address
   68            | CMOV address COMMA address
   69            | CATT address COMMA address
   70            | CTKF address COMMA address
   71            | CGVF address COMMA address
   72            | CEAT address
   73            | CPS
   74            | CPW
   75            | NOP

   76 quted_string: CHARACTER_STRING

   77 label: ID

   78 address: expression
   79        | LSQUARE expression RSQUARE

   80 expression: expr_0

   81 expr_0: expr_1
   82       | expr_0 PLUS expr_1
   83       | expr_0 MINUS expr_1

   84 expr_1: expr_2
   85       | expr_1 STAR expr_2

   86 expr_2: expr_3
   87       | LROUND expr_0 RROUND

   88 expr_3: R0
   89       | R1
   90       | R2
   91       | R3
   92       | RC
   93       | RF
   94       | IF
   95       | IR
   96       | number
   97       | label

   98 number: INT_NUMBER
   99       | HEX_NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
LROUND (258) 87
RROUND (259) 87
LSQUARE (260) 79
RSQUARE (261) 79
COMMA (262) 20 21 23 25 26 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 59 61 68 69 70 71
NEW_LINE (263) 4 11 15 18
COLON (264) 19
DOT (265) 15
INT_NUMBER (266) 98
HEX_NUMBER (267) 99
ID (268) 77
CHARACTER_STRING (269) 76
PRAGMA_NAME (270) 6
PRAGMA_VERSION (271) 7
PRAGMA_CLASS (272) 5
PRAGMA_DEFINE (273) 11
R0 (274) 88
R1 (275) 89
R2 (276) 90
R3 (277) 91
RC (278) 92
RF (279) 93
IF (280) 94
IR (281) 95
PLUS (282) 82
MINUS (283) 83
STAR (284) 85
ADD (285) 20
AND (286) 21
DEC (287) 22
DIV (288) 23
INC (289) 24
MOD (290) 25
MUL (291) 26
NEG (292) 27
NOT (293) 28
OR (294) 29
SUB (295) 30
XOR (296) 31
MIN (297) 32
MAX (298) 33
BSF (299) 34
BSR (300) 35
BT (301) 36
BTR (302) 37
BTS (303) 38
BTC (304) 39
SHL (305) 40
SHR (306) 41
ROL (307) 42
ROR (308) 43
EQ (309) 44
NEQ (310) 45
GT (311) 46
GE (312) 47
LT (313) 48
LE (314) 49
TEST (315) 50
JMP (316) 51
JZ (317) 52
JNZ (318) 53
JO (319) 54
JNO (320) 55
JCZ (321) 56
JCNZ (322) 57
LOOP (323) 58
MOV (324) 59
CALL (325) 60
LEN (326) 61
EXIT (327) 62
LDTR (328) 63
LDFD (329) 64
LDEN (330) 65
LDFR (331) 66
CIDL (332) 67
CMOV (333) 68
CATT (334) 69
CTKF (335) 70
CGVF (336) 71
CEAT (337) 72
CPS (338) 73
CPW (339) 74
NOP (340) 75


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
code (87)
    on left: 1, on right: 0
list_of_pragmas (88)
    on left: 2 3, on right: 1 2
pragma_definition (89)
    on left: 4, on right: 2 3
pragma (90)
    on left: 5 6 7, on right: 4
list_of_defines (91)
    on left: 8 9 10, on right: 8 14
define_declaration (92)
    on left: 11, on right: 8 9
list_of_asm_functions (93)
    on left: 12 13, on right: 1 12
asm_function (94)
    on left: 14, on right: 12 13
asm_function_name (95)
    on left: 15, on right: 14
list_of_commands (96)
    on left: 16 17, on right: 14 16
asm_command_line (97)
    on left: 18, on right: 16 17
asm_command (98)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75, on right:
    18
quted_string (99)
    on left: 76, on right: 4
label (100)
    on left: 77, on right: 11 15 19 51 52 53 54 55 56 57 58 60 97
address (101)
    on left: 78 79, on right: 20 21 22 23 24 25 26 27 28 29 30 31 32
    33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 59 61 63
    64 65 66 67 68 69 70 71 72
expression (102)
    on left: 80, on right: 78 79
expr_0 (103)
    on left: 81 82 83, on right: 80 82 83 87
expr_1 (104)
    on left: 84 85, on right: 81 82 83 85
expr_2 (105)
    on left: 86 87, on right: 84 85
expr_3 (106)
    on left: 88 89 90 91 92 93 94 95 96 97, on right: 86
number (107)
    on left: 98 99, on right: 11 96


state 0

    0 $accept: . code $end

    PRAGMA_NAME     shift, and go to state 1
    PRAGMA_VERSION  shift, and go to state 2
    PRAGMA_CLASS    shift, and go to state 3

    code               go to state 4
    list_of_pragmas    go to state 5
    pragma_definition  go to state 6
    pragma             go to state 7


state 1

    6 pragma: PRAGMA_NAME .

    $default  reduce using rule 6 (pragma)


state 2

    7 pragma: PRAGMA_VERSION .

    $default  reduce using rule 7 (pragma)


state 3

    5 pragma: PRAGMA_CLASS .

    $default  reduce using rule 5 (pragma)


state 4

    0 $accept: code . $end

    $end  shift, and go to state 8


state 5

    1 code: list_of_pragmas . list_of_asm_functions
    2 list_of_pragmas: list_of_pragmas . pragma_definition

    PRAGMA_NAME     shift, and go to state 1
    PRAGMA_VERSION  shift, and go to state 2
    PRAGMA_CLASS    shift, and go to state 3
    PRAGMA_DEFINE   shift, and go to state 9

    PRAGMA_DEFINE  [reduce using rule 10 (list_of_defines)]
    $default       reduce using rule 10 (list_of_defines)

    pragma_definition      go to state 10
    pragma                 go to state 7
    list_of_defines        go to state 11
    define_declaration     go to state 12
    list_of_asm_functions  go to state 13
    asm_function           go to state 14


state 6

    3 list_of_pragmas: pragma_definition .

    $default  reduce using rule 3 (list_of_pragmas)


state 7

    4 pragma_definition: pragma . quted_string NEW_LINE

    CHARACTER_STRING  shift, and go to state 15

    quted_string  go to state 16


state 8

    0 $accept: code $end .

    $default  accept


state 9

   11 define_declaration: PRAGMA_DEFINE . label number NEW_LINE

    ID  shift, and go to state 17

    label  go to state 18


state 10

    2 list_of_pragmas: list_of_pragmas pragma_definition .

    $default  reduce using rule 2 (list_of_pragmas)


state 11

    8 list_of_defines: list_of_defines . define_declaration
   14 asm_function: list_of_defines . asm_function_name list_of_commands

    DOT            shift, and go to state 19
    PRAGMA_DEFINE  shift, and go to state 9

    define_declaration  go to state 20
    asm_function_name   go to state 21


state 12

    9 list_of_defines: define_declaration .

    $default  reduce using rule 9 (list_of_defines)


state 13

    1 code: list_of_pragmas list_of_asm_functions .
   12 list_of_asm_functions: list_of_asm_functions . asm_function

    PRAGMA_DEFINE  shift, and go to state 9

    DOT            reduce using rule 10 (list_of_defines)
    PRAGMA_DEFINE  [reduce using rule 10 (list_of_defines)]
    $default       reduce using rule 1 (code)

    list_of_defines     go to state 11
    define_declaration  go to state 12
    asm_function        go to state 22


state 14

   13 list_of_asm_functions: asm_function .

    $default  reduce using rule 13 (list_of_asm_functions)


state 15

   76 quted_string: CHARACTER_STRING .

    $default  reduce using rule 76 (quted_string)


state 16

    4 pragma_definition: pragma quted_string . NEW_LINE

    NEW_LINE  shift, and go to state 23


state 17

   77 label: ID .

    $default  reduce using rule 77 (label)


state 18

   11 define_declaration: PRAGMA_DEFINE label . number NEW_LINE

    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25

    number  go to state 26


state 19

   15 asm_function_name: DOT . label NEW_LINE

    ID  shift, and go to state 17

    label  go to state 27


state 20

    8 list_of_defines: list_of_defines define_declaration .

    $default  reduce using rule 8 (list_of_defines)


state 21

   14 asm_function: list_of_defines asm_function_name . list_of_commands

    ID    shift, and go to state 17
    ADD   shift, and go to state 28
    AND   shift, and go to state 29
    DEC   shift, and go to state 30
    DIV   shift, and go to state 31
    INC   shift, and go to state 32
    MOD   shift, and go to state 33
    MUL   shift, and go to state 34
    NEG   shift, and go to state 35
    NOT   shift, and go to state 36
    OR    shift, and go to state 37
    SUB   shift, and go to state 38
    XOR   shift, and go to state 39
    MIN   shift, and go to state 40
    MAX   shift, and go to state 41
    BSF   shift, and go to state 42
    BSR   shift, and go to state 43
    BT    shift, and go to state 44
    BTR   shift, and go to state 45
    BTS   shift, and go to state 46
    BTC   shift, and go to state 47
    SHL   shift, and go to state 48
    SHR   shift, and go to state 49
    ROL   shift, and go to state 50
    ROR   shift, and go to state 51
    EQ    shift, and go to state 52
    NEQ   shift, and go to state 53
    GT    shift, and go to state 54
    GE    shift, and go to state 55
    LT    shift, and go to state 56
    LE    shift, and go to state 57
    TEST  shift, and go to state 58
    JMP   shift, and go to state 59
    JZ    shift, and go to state 60
    JNZ   shift, and go to state 61
    JO    shift, and go to state 62
    JNO   shift, and go to state 63
    JCZ   shift, and go to state 64
    JCNZ  shift, and go to state 65
    LOOP  shift, and go to state 66
    MOV   shift, and go to state 67
    CALL  shift, and go to state 68
    LEN   shift, and go to state 69
    EXIT  shift, and go to state 70
    LDTR  shift, and go to state 71
    LDFD  shift, and go to state 72
    LDEN  shift, and go to state 73
    LDFR  shift, and go to state 74
    CIDL  shift, and go to state 75
    CMOV  shift, and go to state 76
    CATT  shift, and go to state 77
    CTKF  shift, and go to state 78
    CGVF  shift, and go to state 79
    CEAT  shift, and go to state 80
    CPS   shift, and go to state 81
    CPW   shift, and go to state 82
    NOP   shift, and go to state 83

    list_of_commands  go to state 84
    asm_command_line  go to state 85
    asm_command       go to state 86
    label             go to state 87


state 22

   12 list_of_asm_functions: list_of_asm_functions asm_function .

    $default  reduce using rule 12 (list_of_asm_functions)


state 23

    4 pragma_definition: pragma quted_string NEW_LINE .

    $default  reduce using rule 4 (pragma_definition)


state 24

   98 number: INT_NUMBER .

    $default  reduce using rule 98 (number)


state 25

   99 number: HEX_NUMBER .

    $default  reduce using rule 99 (number)


state 26

   11 define_declaration: PRAGMA_DEFINE label number . NEW_LINE

    NEW_LINE  shift, and go to state 88


state 27

   15 asm_function_name: DOT label . NEW_LINE

    NEW_LINE  shift, and go to state 89


state 28

   20 asm_command: ADD . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 101
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 29

   21 asm_command: AND . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 108
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 30

   22 asm_command: DEC . address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 109
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 31

   23 asm_command: DIV . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 110
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 32

   24 asm_command: INC . address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 111
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 33

   25 asm_command: MOD . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 112
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 34

   26 asm_command: MUL . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 113
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 35

   27 asm_command: NEG . address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 114
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 36

   28 asm_command: NOT . address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 115
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 37

   29 asm_command: OR . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 116
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 38

   30 asm_command: SUB . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 117
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 39

   31 asm_command: XOR . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 118
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 40

   32 asm_command: MIN . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 119
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 41

   33 asm_command: MAX . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 120
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 42

   34 asm_command: BSF . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 121
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 43

   35 asm_command: BSR . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 122
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 44

   36 asm_command: BT . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 123
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 45

   37 asm_command: BTR . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 124
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 46

   38 asm_command: BTS . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 125
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 47

   39 asm_command: BTC . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 126
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 48

   40 asm_command: SHL . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 127
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 49

   41 asm_command: SHR . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 128
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 50

   42 asm_command: ROL . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 129
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 51

   43 asm_command: ROR . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 130
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 52

   44 asm_command: EQ . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 131
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 53

   45 asm_command: NEQ . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 132
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 54

   46 asm_command: GT . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 133
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 55

   47 asm_command: GE . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 134
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 56

   48 asm_command: LT . address COMMA address

    LROUND      shift, and go to state 90
    LSQUARE     shift, and go to state 91
    INT_NUMBER  shift, and go to state 24
    HEX_NUMBER  shift, and go to state 25
    ID          shift, and go to state 17
    R0          shift, and go to state 92
    R1          shift, and go to state 93
    R2          shift, and go to state 94
    R3          shift, and go to state 95
    RC          shift, and go to state 96
    RF          shift, and go to state 97
    IF          shift, and go to state 98
    IR          shift, and go to state 99

    label       go to state 100
    address     go to state 135
    expression  go to state 102
    expr_0      go to state 103
    expr_1      go to state 104
    expr_2      go to state 105
    expr_3      go to state 106
    number      go to state 107


state 57

   49 asm_command: LE . address COMMA address
